--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,17 +16,29 @@ jobs:
     - name: Create Firebase Config from Secrets
       run: |
         mkdir -p data
-        cat > data/firebase-config.js << 'EOF'
+        cat > data/firebase-config.js <<EOF
         // Auto-generated from GitHub Secrets - DO NOT COMMIT
         window.firebaseConfig = {
-            apiKey: "${{ secrets.FIREBASE_API_KEY }}",
-            authDomain: "${{ secrets.FIREBASE_AUTH_DOMAIN }}",
-            projectId: "${{ secrets.FIREBASE_PROJECT_ID }}",
-            storageBucket: "${{ secrets.FIREBASE_STORAGE_BUCKET }}",
-            messagingSenderId: "${{ secrets.FIREBASE_MESSAGING_SENDER_ID }}",
-            appId: "${{ secrets.FIREBASE_APP_ID }}"
+          apiKey: "${{ secrets.FIREBASE_API_KEY }}",
+          authDomain: "${{ secrets.FIREBASE_AUTH_DOMAIN }}",
+          projectId: "${{ secrets.FIREBASE_PROJECT_ID }}",
+          storageBucket: "${{ secrets.FIREBASE_STORAGE_BUCKET }}",
+          messagingSenderId: "${{ secrets.FIREBASE_MESSAGING_SENDER_ID }}",
+          appId: "${{ secrets.FIREBASE_APP_ID }}"
         };
         EOF
+
+        # Quick validation: file must exist and be non-empty (will not print contents)
+        if [ -s data/firebase-config.js ]; then
+          echo "[deploy.yml] data/firebase-config.js created and not empty"
+        else
+          echo "[deploy.yml] ERROR: data/firebase-config.js is missing or empty" >&2
+          ls -la data || true
+          exit 1
+        fi
+
+        # Show current root files for debugging (will not show file contents)
+        ls -la
 
     - name: Deploy to GitHub Pages
       uses: peaceiris/actions-gh-pages@v3
